feat: add memcached, loki, grafana & promtail

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: "3.9"
 services:
+
   pihole:
-    container_name: pihole
     build: ./dockerfiles/pihole/.
     ports:
       - "53:53/tcp"
@@ -12,34 +12,50 @@ services:
       TZ: 'Europe/Vienna'
       WEBPASSWORD: 'admin'
     volumes:
-      - './volumes/pihole/etc-pihole:/etc/pihole'
-      - './volumes/pihole/etc-dnsmasq.d:/etc/dnsmasq.d'
+      - pihole_etc:/etc/pihole
+      - pihole_dns:/etc/dnsmasq.d
     cap_add:
       - NET_ADMIN
     restart: unless-stopped
+
   squid:
-    container_name: squid
     build: ./dockerfiles/squid/.
     ports:
       - "3128:3128/tcp"
       - "3128:3128/udp"
     volumes:
-      - ./dockerfiles/squid/squid.conf:/etc/squid/squid.conf
+      - squid:/etc/squid/squid.conf
     restart: unless-stopped
-  homebridge:
-    container_name: homebridge
-    image: oznu/homebridge:ubuntu
-    mem_limit: 187m
-    # network_mode: host
+
+  memcached:
+    image: memcached:alpine
+    mem_limit: 256m
+    restart: unless-stopped
+
+  loki:
+    image: grafana/loki:latest
     ports:
-      - "8581:8581/tcp"
-      - "8581:8581/udp"
-    environment:
-      PGID: '1000'
-      PUID: '1000'
-      HOMEBRIDGE_CONFIG_UI: '1'
-      HOMEBRIDGE_CONFIG_UI_PORT: '8581'
-      TZ: 'Europe/Vienna'
-    volumes:
-      - ./volumes/homebridge:/homebridge
+      - "3100:3100/tcp"
+      - "3100:3100/udp"
+    command: -config.file=/etc/loki/local-config.yaml
     restart: unless-stopped
+
+  promtail:
+    image: grafana/promtail:latest
+    volumes:
+      - /var/log:/var/log
+    command: -config.file=/etc/promtail/config.yml
+    restart: unless-stopped
+
+  grafana:
+    image: grafana/grafana:latest
+    ports:
+      - "3000:3000/tcp"
+      - "3000:3000/udp"
+    restart: unless-stopped
+
+volumes:
+  pihole_etc:
+  pihole_dns:
+  squid:
+  homebridge:
